4 endpoints for accounts, fixed user mapper + tried 2 tests for accounts to figure out transactional
